Bug 433059 - "Active/Inactive Titlebar" colors are visible and editable but confusingly unused when Header colors are present
Summary: "Active/Inactive Titlebar" colors are visible and editable but confusingly un...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.21.0
Platform: Other Other
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 431905 433126 433383 435031 445004 445722 468659 470032 482839 493677 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-17 09:27 UTC by Mark Smith
Modified: 2024-11-16 11:58 UTC (History)
33 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.4
Sentry Crash Report:


Attachments
Avaialable themes (171.74 KB, image/png)
2024-09-30 06:30 UTC, David Pérez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Smith 2021-02-17 09:27:45 UTC
SUMMARY
Sorry if I worded this in an odd way, English is not my primary language. 
That being said, something I always did was clone the default Breeze Dark theme and then edit it. One thing I like is having two very different active and inactive titlebar colors. In Plasma 5.21 the titlebar color can no longer be changed from what I can tell, because the changes to the color do not apply.

STEPS TO REPRODUCE
1. Edit Breeze Dark by changing the active titlebar color
2. save the changed theme
3. Apply the theme

OBSERVED RESULT
Titlebar color setting is ignored

EXPECTED RESULT
Titlebar color setting is applied

SOFTWARE/OS VERSIONS

ADDITIONAL INFORMATION
It seems like this only affects Breeze Dark and copies of it. Other color schemes will apply changed titlebar colors.
Comment 1 nttkde 2021-02-17 20:28:24 UTC
I noticed this too;
I used to have black Active Titlebar color, and after update to Plasma 5.21 it went back to the default grey.
I rebooted and when I went to the Colors tab in system settings, it showed an in-app notification that said something like "breeze light is not installed/available, using default instead".
However I think Breeze Light was selected on the view, so I thought it was the scheme I had used previously.
So I tried to edit it (had to save a new copy of it). The new copy did not seem to change the titlebar colors, not even after logging out.
I haven't seen the notification after logging back in but changing colors still doesn't work.

(Finally I realized I had black Active Titlebar on the basic Breeze scheme so I used it as a workaround to my own problem.)


In my $HOME/.kde/share/apps/color-schemes/ I have files:
Breeze Light.colors [Notice the space. File modified today.]
BreezeLight.colors  [No space. Identical copy of the previous file, touched more recently though.]
VaaleaBreeze.colors [This is the most recent scheme that I copied. Its name means light breeze in my localization.]

and Breeze.colors and Breeze Dark.colors but those have not been modified recently.
Comment 2 Nate Graham 2021-02-17 22:51:57 UTC
Yes, this is a quirk of the new Breeze theme. If the color scheme has any Header colors in it, Active and Inactive titlebar colors are ignored.

We wanted to expose this in the color scheme editor UI but ran out of time for Plasma 5.21. Sorry about that. We're hoping to have it done for 5.22.

In the meantime, you can do one of the following:
1. Use Active/Inactive Header colors instead
2. Manually edit your color scheme's file in ~/.local/share/color-schemes and remove all of the Header color sections, and then Active/Inactive titlebar colors will work again.
Comment 3 Mark Smith 2021-02-18 15:00:44 UTC
Thank you, the workaround did the job, this will do for now. By the way, I do the same thing as nttkde, fully black titlebars ftw.
Comment 4 Nate Graham 2021-02-21 15:21:33 UTC
*** Bug 433383 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2021-03-21 12:51:32 UTC
*** Bug 431905 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2021-03-24 21:49:28 UTC
*** Bug 433126 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2021-04-01 15:39:22 UTC
*** Bug 435031 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-04-01 15:39:59 UTC
As a stopgap solution to confuse people less, maybe we could hide the Titlebar colors from the color scheme editor when the color scheme being edited has header colors.
Comment 9 Nate Graham 2021-11-08 20:38:20 UTC
*** Bug 445004 has been marked as a duplicate of this bug. ***
Comment 10 Dennis Nik 2021-11-19 12:53:57 UTC
*** Bug 445722 has been marked as a duplicate of this bug. ***
Comment 11 Hirad 2022-09-20 18:07:55 UTC Comment hidden (spam)
Comment 12 Nate Graham 2022-09-20 19:39:22 UTC Comment hidden (spam)
Comment 13 Hirad 2022-09-22 05:48:59 UTC
(In reply to Nate Graham from comment #12)
> Yeah, because nobody's fixed this yet. :)

Shouldn't the developer who added the header section in first place and forgot to add inactive color to fix it? Or anyone that is in charge of maintaining system settings or KColorSchemeEditor to be specific.
Comment 14 Forest 2023-02-05 23:17:22 UTC
Worth noting:

Plasma 5.20 (which is currently used in Debian Stable) has a built-in theme with clearly different active/inactive window titlebar colors, called Breeze High Contrast.

That theme is gone in Plasma 5.26.90, which suggests that people upgrading to the new release will be faced with a sudden loss of functionality, and those who try to fix it through custom colors will be frustrated to find that the customization doesn't actually work. I doubt most of them will find there way here to discover the workaround.
Comment 15 Nate Graham 2023-04-19 15:39:10 UTC
*** Bug 468659 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2023-05-22 14:32:46 UTC
*** Bug 470032 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2024-03-10 05:00:13 UTC
*** Bug 482839 has been marked as a duplicate of this bug. ***
Comment 18 David Pérez 2024-09-17 12:22:00 UTC
I'd like to change the color of active windows.
Is there any workaround for Plasma 6.1.15?
Comment 19 David Pérez 2024-09-17 12:24:22 UTC
I don't have a ~/.local/share/color-schemes file.
Comment 20 ak-su 2024-09-19 17:41:08 UTC
 David Pérez: Do you have the colour theme "Breeze Classic" in Plasma 6.1.15? Selecting that colour theme resolves your problem.
Comment 21 Nate Graham 2024-09-26 18:32:14 UTC
*** Bug 493677 has been marked as a duplicate of this bug. ***
Comment 22 ak-su 2024-09-27 08:20:55 UTC
(In reply to ak-su from comment #20)
>  David Pérez: Do you have the colour theme "Breeze Classic" in Plasma 6.1.15? Selecting that colour theme resolves your problem.

Unfortunately I have to report that selecting the "Breeze Classic" to fix the problem with not seeing easily which window is the active window doesn't even work in Plasma 5.24.7.
Comment 23 David Pérez 2024-09-30 06:28:17 UTC
(In reply to ak-su from comment #20)
>  David Pérez: Do you have the colour theme "Breeze Classic" in Plasma
> 6.1.15? Selecting that colour theme resolves your problem.

I have the following themes:
- Breeze (it is repeated sveral times)), 
- Breeze dark
- Breeze Twilight
Comment 24 David Pérez 2024-09-30 06:30:50 UTC
Created attachment 174219 [details]
Avaialable themes

Whenever I try to download a new theme, several new Breeze icons appear
Comment 25 ak-su 2024-09-30 08:47:19 UTC
> Unfortunately I have to report that selecting the "Breeze Classic" to fix the problem with not seeing easily which window is the active window doesn't even work in Plasma 5.24.7.

I need to correct myself. The "Breeze Classic" colour theme fixes that problem, but in Kubuntu 22.04/Plasma 5.24.7, only after some delay or logout/login.
Comment 26 Bug Janitor Service 2024-11-13 14:56:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4912
Comment 27 Akseli Lahtinen 2024-11-13 15:54:56 UTC
Git commit f10c8848235cec8912ddcb9192a55457e828d4d3 by Akseli Lahtinen.
Committed on 13/11/2024 at 14:59.
Pushed by akselmo into branch 'master'.

coloreditor: Hide titlebar color buttons if header is set

When header color is set, we ignore any titlebar color settings.
To avoid confusion, we should hide these buttons when they have no
effect.

M  +19   -7    kcms/colors/editor/scmeditorcolors.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f10c8848235cec8912ddcb9192a55457e828d4d3
Comment 28 Akseli Lahtinen 2024-11-13 16:28:27 UTC
Git commit 47257619ae54a83397e2879b409cfeac45c4dba8 by Akseli Lahtinen.
Committed on 13/11/2024 at 15:55.
Pushed by akselmo into branch 'Plasma/6.2'.

coloreditor: Hide titlebar color buttons if header is set

When header color is set, we ignore any titlebar color settings.
To avoid confusion, we should hide these buttons when they have no
effect.


(cherry picked from commit f10c8848235cec8912ddcb9192a55457e828d4d3)

f10c8848 coloreditor: Hide titlebar color buttons if header is set

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +19   -7    kcms/colors/editor/scmeditorcolors.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/47257619ae54a83397e2879b409cfeac45c4dba8
Comment 29 ak-su 2024-11-15 17:52:38 UTC
If these buttons will be hidden, how do I change the window title bar colour?
Comment 30 Nate Graham 2024-11-15 18:43:45 UTC
By changing the Header colors. This is always how it's been when editing a Header-color-using color scheme.