coloreditor: Hide titlebar color buttons if header is set

When header color is set, we ignore any titlebar color settings.
To avoid confusion, we should hide these buttons when they have no
effect.

BUG:433059


(cherry picked from commit f10c8848235cec8912ddcb9192a55457e828d4d3)

f10c8848 coloreditor: Hide titlebar color buttons if header is set

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>